# Project5_HR

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  databaseScheme.txt  docker-compose.yml  employeeinfo.cpp  employeeinfo.h  vcpkg.json
.github/workflows/: build-test-name_check.yml  main.yml
Project5_HR/: .env  Dockerfile.backend  Dockerfile.frontend  Project5_HR.sln  vcpkg.json
Project5_HR/Project5_HR/: CommunicationHub.cpp  CommunicationHub.h  Conversation.cpp  DatabaseControl.cpp  DatabaseControl.h  DateTime.cpp  DateTime.h  DateTimeHelper.cpp  Employee.cpp  Employee.h  EmployeeInfoManagement.cpp  EmployeeInfoManagement.h  FileRepository.cpp  InputValidator.cpp  Message.cpp  Payroll.cpp  Payroll.h  Project5_HR.vcxproj  Project5_HR.vcxproj.filters  Shift.cpp  Shift.h  ShiftRecord.cpp  ShiftRecord.h  account.cpp  account.h  employeeinfo.cpp  employeeinfo.h  employees.txt  source.cpp  test.h
Project5_HR/Project5_HR_Front_End/: .env  index.html  package-lock.json  package.json  tsconfig.app.json
Project5_HR/Project5_HR_Test/: Account_Test.cpp  Authentication_Tests.cpp  Communication_Tests.cpp  Employee_Info_Tests.cpp  Project5_HR_Test.cpp  Project5_HR_Test.vcxproj  Project5_HR_Test.vcxproj.filters
Project5_HR_Back_End/: .env  Dockerfile.backend  app.py  backend.py  dockerfile  gateway.py  requirements.txt  test.py
Project5_HR_Back_End/tests/: conftest.py  test_auth.py  test_communications.py  test_payrolls.py  test_shifts.py  test_staffs.py
Project5_HR_Front_End/: Dockerfile.frontend  nginx.conf  package-lock.json  package.json  vite-env.d.ts  vite.config.ts
Project5_HR_Front_End/src/: App.tsx  index.css
docs/html/: _account___test_8cpp.html  _communication___tests_8cpp.html  _communication_hub_8cpp.html  _communication_hub_8h.html  _communication_hub_8h_source.html  _conversation_8cpp.html  _conversation_8h.html  _conversation_8h_source.html  _date_time_helper_8cpp.html  _date_time_helper_8h.html  _date_time_helper_8h_source.html  _employee_8cpp.html  _employee_8h.html  _employee_8h_source.html  _employee___info___tests_8cpp.html  _employee_info_management_8cpp.html  _employee_info_management_8h.html  _employee_info_management_8h_source.html  _file_repository_8cpp.html  _file_repository_8h.html  _file_repository_8h_source.html  _i_repository_8h.html  _i_repository_8h_source.html  _input_validator_8cpp.html  _input_validator_8h.html  _input_validator_8h_source.html  _message_8cpp.html  _message_8h.html  _message_8h_source.html  _payroll_8cpp.html  _payroll_8h.html  _payroll_8h_source.html  _project5___h_r___test_8cpp.html  _r_e_a_d_m_e_8md.html  account_8cpp.html  account_8h.html  account_8h_source.html  account_8py.html  account__db_8py.html  annotated.html  (+124 more)
docs/latex/: _account___test_8cpp.tex  _communication___tests_8cpp.tex  _communication_hub_8cpp.tex  _communication_hub_8h.tex  _communication_hub_8h_source.tex  _conversation_8h.tex  _conversation_8h_source.tex  _date_time_helper_8h.tex  _date_time_helper_8h_source.tex  _employee_8h.tex  _employee_8h_source.tex  _i_repository_8h.tex  (+107 more)
html/: _0dbabel_2parser_2_c_h_a_n_g_e_l_o_g_8md.html  _0dhumanwhocodes_2module-importer_2_c_h_a_n_g_e_l_o_g_8md.html  _account_8cpp.html  _account_8h.html  _account_8h_source.html  _account___test_8cpp.html  _communication___tests_8cpp.html  _communication_hub_8cpp.html  _communication_hub_8h.html  _communication_hub_8h_source.html  _conversation_8cpp.html  _conversation_8h.html  _conversation_8h_source.html  _date_time_helper_8cpp.html  _date_time_helper_8h.html  _date_time_helper_8h_source.html  _employee_8cpp.html  _employee_8h.html  _employee_8h_source.html  _employee___info___tests_8cpp.html  _employee_info_management_8cpp.html  _employee_info_management_8h.html  _employee_info_management_8h_source.html  _file_repository_8cpp.html  _file_repository_8h.html  _file_repository_8h_source.html  _i_repository_8h.html  _i_repository_8h_source.html  _input_validator_8cpp.html  _input_validator_8h.html  _input_validator_8h_source.html  _message_8cpp.html  _message_8h.html  _message_8h_source.html  _payroll_8cpp.html  _payroll_8h.html  _payroll_8h_source.html  _r_e_a_d_m_e_8md.html  acorn_2_c_h_a_n_g_e_l_o_g_8md.html  annotated.html  (+792 more)
latex/: _0dbabel_2parser_2_c_h_a_n_g_e_l_o_g_8md.tex  _0dhumanwhocodes_2module-importer_2_c_h_a_n_g_e_l_o_g_8md.tex  _account_8cpp.tex  _account_8h.tex  _account_8h_source.tex  _communication_hub_8h.tex  _communication_hub_8h_source.tex  _conversation_8cpp.tex  _conversation_8h.tex  _conversation_8h_source.tex  _date_time_helper_8cpp.tex  _date_time_helper_8h.tex  _employee_8cpp.tex  _employee_8h.tex  _employee_8h_source.tex  _employee_info_management_8cpp.tex  _employee_info_management_8h.tex  _employee_info_management_8h_source.tex  _file_repository_8h.tex  _file_repository_8h_source.tex  _i_repository_8h.tex  _input_validator_8h.tex  _message_8cpp.tex  _message_8h.tex  _message_8h_source.tex  _payroll_8cpp.tex  _payroll_8h.tex  _payroll_8h_source.tex  _r_e_a_d_m_e_8md.tex  acorn_2_c_h_a_n_g_e_l_o_g_8md.tex  annotated.tex  argparse_2_c_h_a_n_g_e_l_o_g_8md.tex  balanced-match_2_l_i_c_e_n_s_e_8md.tex  chownr_2_l_i_c_e_n_s_e_8md.tex  class_account.tex  class_communication_hub.tex  class_conversation.tex  class_date_time_helper.tex  class_employee.tex  class_employee_info_management.tex  (+751 more)
src/: main.cpp
(+370 files in other folders)
